# assignment-tracker

./: .gitignore  AGENTS.md  README.md  academic-command-center-build-prompt.md  pyproject.toml
src/acc/: __init__.py  config.py  grading_signals.py  main.py  progress.py
src/acc/ai/: __init__.py  client.py  crawl_extractor.py  crawl_link_picker.py  openai_queue.py  prompts.py  syllabus_parser.py
src/acc/dashboard/: app.py
src/acc/db/: engine.py  models.py  repository.py
src/acc/delivery/: __init__.py
src/acc/engine/: __init__.py  normalizer.py
src/acc/scheduler/: __init__.py  planner.py
src/acc/scrapers/: __init__.py  base.py  crawl.py  crawl_navigation.py  d2l.py  external.py  fetch_limiter.py  snapshots.py  utils.py
tests/: test_ai_client.py  test_config.py  test_crawl.py  test_crawl_extractor.py  test_crawl_link_picker.py  test_crawl_navigation.py  test_crawl_sync_db.py  test_d2l_parsing.py  test_dashboard.py  test_external_parsing.py  test_fetch_limiter.py  test_main.py  test_normalizer.py  test_provenance.py  test_repository_mapping.py  test_repository_sync.py  test_scheduler.py  test_syllabus_parser.py
